# AudioDSP4ML

./: 09. How to Extract Root-Mean Square Energy and Zero-Crossing Rate from Audio.ipynb  pyproject.toml
