[tool.poetry]
name = "audiodsp4ml"
version = "0.1.0"
description = "\"V. Velardo Course Audio Signal Processing for Machine Learning\""
authors = ["NemeWolf <nehemiasman_8@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
librosa = "^0.10.2.post1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
